--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         id="hmbtn"
       >
         <img
-          src="src/hambtn.png"
+          src="hambtn.png"
           style="
             width: 40px;
             height: 40px;
@@ -66,7 +66,7 @@
       id="hmop"
     >
       <a
-        href="src/readme.txt"
+        href="readme.txt"
         download
         style="
           position: relative;
@@ -84,7 +84,7 @@
         >About</a
       >
       <a
-        href="src/readme.txt"
+        href="readme.txt"
         download
         style="
           position: relative;
@@ -102,7 +102,7 @@
         >Products</a
       >
       <a
-        href="src/readme.txt"
+        href="readme.txt"
         download
         style="
           position: relative;
@@ -198,13 +198,13 @@
         "
       >
         <img
-          src="src/search.png"
+          src="search.png"
           style="width: 20px; position: absolute; top: 7px; left: 6px;"
         />
       </button>
     </div>
 
     <div id="app"></div>
-    <script src="src/interaction.js"></script>
+    <script src="interaction.js"></script>
   </body>
 </html>
